# OBD

./: AUTHORS  CMakeLists.txt  Doxyfile.in  LICENSE  Makefile.am  Makefile.in  NEWS  OBDConfig.h.in  README  TODO  configure  configure.ac  plot.py  plotfunctions.py
bikegui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  parameters.cpp  parameters.h
cmake/Modules/: FindCln.cmake  FindGinac.cmake
gtest/: CMakeLists.txt
src/: Makefile  Makefile.in  gslVecUtils.cpp  gslVecUtils.h  simulate.cpp  whipple.cpp  whipple.h  whipple_al.cpp  whipple_gyro.cpp  whipple_gyro.h  whippleeig.cpp  whippleeig_gyro.cpp  whipplesim.cpp  whipplesim_gyro.cpp  whippleutils.cpp  whippleutils.h  whippleutils_gyro.cpp  whippleutils_gyro.h
src/old/: whipple.h  whippleeig.cpp  whippleutils.cpp
whipple/: CMakeLists.txt  Makefile.am  Makefile.in  plot.py  plotfunctions.py  whippleeig.cpp  whipplesim.cpp  whipplesteady.cpp  whipplesteady_review.cpp
whipple/bikeparameters/: benchmark.txt  benchmark_toroidal.txt
whipple/common/: CMakeLists.txt  Makefile.am  Makefile.in  gslVecUtils.cpp  gslVecUtils.h  whipple.cpp  whipple.h  whipple_al.cpp  whipple_al_steady.cpp  whipplesteadyboundaries.cpp  whipplesteadyboundaries.h  whipplesteadycalcs.cpp  whipplesteadycalcs.h  whippleutils.cpp  whippleutils.h
whipple/derivation/: CMakeLists.txt  eoms.cpp
whipple/examples/: CMakeLists.txt  steadyturning.py  whippleeig.cpp  whipplesim.cpp  whipplesteady.cpp  whipplesteady_origin.cpp  whipplesteady_review.cpp
whipple/include/: GyroStat.h  gslVecUtils.h  whipple.h  whippleparams.h  whipplesteadycalcs.h
whipple/initialconditions/: benchmark_ic.txt  upright_static.txt
whipple/old/: whipple.cpp  whipplesim.cpp
whipple/src/: CMakeLists.txt  GyroStat.cpp  gslVecUtils.cpp  whipple.cpp  whipple_al.cpp  whipple_al_steady.cpp  whipplesteadycalcs.cpp  whippleutils.cpp
whipple/tests/: CMakeLists.txt  Makefile.am  eigs.cpp  whipple-eigs-test.cpp  whipple-eigs-unittest.cpp
