noinst_LIBRARIES = libwhipplecommon.a libwhipplesteady.a
libwhipplecommon_a_SOURCES = gslVecUtils.cpp whipple_al.cpp whipple.cpp whippleutils.cpp gslVecUtils.h whipple.h whippleutils.h

libwhipplesteady_a_SOURCES = whipple.h whipple_al_steady.cpp whipplesteadyboundaries.cpp whipplesteadyboundaries.h gslVecUtils.h gslVecUtils.cpp
